tests/ui/issues/issue-69602-type-err-during-codegen-ice.stderr
error[E0437]: type `M` is not a member of trait `TraitB`
  --> $DIR/issue-69602-type-err-during-codegen-ice.rs:17:5
   |
LL |     type M   = A;
   |     ^^^^^^^^^^^^^ not a member of trait `TraitB`

error[E0046]: not all trait items implemented, missing: `MyA`
  --> $DIR/issue-69602-type-err-during-codegen-ice.rs:16:1
   |
LL |     type MyA: TraitA;
   |     ---------------- `MyA` from trait
...
LL | impl TraitB for B {
   | ^^^^^^^^^^^^^^^^^ missing `MyA` in implementation

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0046, E0437.
For more information about an error, try `rustc --explain E0046`.
